--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -57,6 +57,8 @@ AutomaticKeepAliveClientMixin(配合混入使用)
 
 Wrap - Warp是一种流式布局。GridView组件也是流式布局，但性能是很低的，毕竟网格的绘制不难么简单
 
+Expanded widget - 让子Widget有伸缩能力的部件，继承自Flexible
+
 
 *********************************
 【其他】
